--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,10 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-python-multipart==0.0.18
+python-multipart==0.0.6
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-decouple==3.8
-httpx==0.25.0
+httpx>=0.24.0,<0.25.0
 supabase==2.0.0
 stripe==7.0.0
 pydantic==2.4.2
@@ -17,6 +17,6 @@ celery==5.3.4
 python-magic==0.4.27
 aiofiles==23.2.1
 Pillow==10.0.1
-requests==2.32.4
+requests==2.31.0
 pytest==7.4.3
 pytest-asyncio==0.21.1
