--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,19 +4,10 @@ python-multipart==0.0.6
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-decouple==3.8
-httpx>=0.24.0,<0.25.0
+httpx==0.24.1
 supabase==2.0.0
 stripe==7.0.0
 pydantic==2.4.2
 pydantic-settings==2.0.3
-sqlalchemy==2.0.23
-alembic==1.12.1
-psycopg2-binary==2.9.7
-redis==5.0.1
-celery==5.3.4
-python-magic==0.4.27
 aiofiles==23.2.1
-Pillow==10.0.1
 requests==2.31.0
-pytest==7.4.3
-pytest-asyncio==0.21.1
