--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,9 +5,14 @@ python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-decouple==3.8
 httpx==0.24.1
-supabase==2.0.0
+postgrest==0.10.8
+gotrue==1.0.4
+realtime==1.0.0
+storage3==0.5.4
+supafunc==0.2.3
 stripe==7.0.0
 pydantic==2.4.2
 pydantic-settings==2.0.3
 aiofiles==23.2.1
 requests==2.31.0
+email-validator==2.0.0
